--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,20 +2,100 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+@font-face { 
+  font-family: 'bangla';
+  src: url('/fonts/bangla.ttf') format('truetype'); 
+  font-weight: normal; font-style: normal; 
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+@font-face { 
+  font-family: 'monaspace-code';
+  src: url('/fonts/monaspace-code.ttf') format('truetype'); 
+  font-weight: normal; font-style: normal; 
+}
+
+.tiptap {
+  :first-child {
+    margin-top: 0;
   }
-}
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  /* List styles */
+  ul{
+   @apply list-disc; 
+  }
+
+  ol {
+    @apply list-decimal;
+  }
+
+  ul,
+  ol {
+    padding: 0 1rem;
+    margin: 1.25rem 1rem 1.25rem 0.4rem;
+
+    li p {
+      margin-top: 0.25em;
+      margin-bottom: 0.25em;
+    }
+  }
+
+  /* Heading styles */
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    line-height: 1.1;
+    margin-top: 2.5rem;
+    text-wrap: pretty;
+  }
+
+  h1,
+  h2 {
+    margin-top: 3.5rem;
+    margin-bottom: 1.5rem;
+  }
+
+  h1 {
+    font-size: 1.4rem;
+  }
+
+  h2 {
+    font-size: 1.2rem;
+  }
+
+  h3 {
+    font-size: 1.1rem;
+  }
+
+  h4,
+  h5,
+  h6 {
+    font-size: 1rem;
+  }
+
+  /* Code and preformatted text styles */
+  code {
+    @apply bg-slate-200 rounded text-[0.85rem] px-[0.25em] py-[0.3em] font-code;
+  }
+
+  pre {
+    @apply bg-gray-500 text-white rounded-md my-2 p-2 ;
+    code {
+      background: none;
+      font-family: 'monaspace-code';
+      color: inherit;
+      font-size: 0.8rem;
+      padding: 0;
+    }
+  }
+
+  blockquote {
+    @apply border-l-2 my-6 pl-4 text-gray-600;
+  }
+
+  hr {
+    @apply border-b my-[2rem];
+  }
 }
