--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,6 +14,14 @@
   font-weight: normal; font-style: normal; 
 }
 
+.tiptap p.is-editor-empty:first-child::before {
+  color: #adb5bd;
+  content: attr(data-placeholder);
+  float: left;
+  height: 0;
+  pointer-events: none;
+}
+
 .tiptap {
   :first-child {
     margin-top: 0;
@@ -49,6 +57,7 @@
     line-height: 1.1;
     margin-top: 2.5rem;
     text-wrap: pretty;
+    font-weight: 600;
   }
 
   h1,
