--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,6 +14,9 @@
   font-weight: normal; font-style: normal; 
 }
 
+.is-active{
+  @apply bg-black text-white;
+}
 .tiptap p.is-editor-empty:first-child::before {
   color: #adb5bd;
   content: attr(data-placeholder);
