--- a/styles/globals.css
+++ b/styles/globals.css
@@ -111,6 +111,27 @@
     @apply border-b my-[2rem];
   }
 }
+/* Overall scrollbar */
+::-webkit-scrollbar {
+  width: 5px; /* Width of the scrollbar */
+}
+
+/* Track (background) */
+::-webkit-scrollbar-track {
+  background: #f1f1f1; /* Color of the track */
+}
+
+/* Thumb (draggable part) */
+::-webkit-scrollbar-thumb {
+  background: #888; /* Color of the thumb */
+  border-radius: 10px; /* Rounded edges */
+}
+
+/* Thumb on hover */
+::-webkit-scrollbar-thumb:hover {
+  @apply bg-blue-500; /* Darker color on hover */
+}
+
 
 @layer base {
   :root { 
